--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,6 @@ on:
 jobs:
   test-code:
     name: Test Code
-    env:
-      INTEGRATION_TEST_TOKEN: ${{ secrets.GCR_TOKEN }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +22,7 @@ jobs:
       - run: npm ci
       - run: npm test
 
-  test-actions-delete-latest-n:
+  test-actions-all-untagged:
     name: Test action delete latest N packages
     runs-on: ubuntu-latest
     needs: [test-code]
@@ -79,7 +77,7 @@ jobs:
           owner: bots-house
           name: ghcr-delete-image-dummy
           token: ${{ secrets.GCR_TOKEN }}
-          untagged-keep-latest: 1
+          untagged-all: true
 
   test-actions-delete-by-tag:
     name: Test action delete by tag
