--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,8 @@ name: GHCR Delete Image
 
 description: > 
   Delete GitHub Container Registry Image by specified tag (or without tag).
-  Options tag, untagged-keep-latest and untagged-older-than mutually exclusive. 
+  Mutually exclusive options: tag, untagged-all
+  
 
 author: bots-house
 
@@ -30,18 +31,11 @@ inputs:
     description: > 
       Tag to delete
     required: false
-  
-  untagged-keep-latest:
-    description: > 
-      Delete all untagged images except the last N
-    required: false
 
-  untagged-older-than:
-    description: > 
-      Delete all untagged images older than N in days.
-    required: false
-  
+  untagged-all:
+    description:  >
+      Delete all untagged images
 
 runs:
-  using: 'node12'
+  using: 'node16'
   main: 'dist/index.js'
