--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
     name: Test Code
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v2
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -30,17 +30,23 @@ jobs:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: set lower case owner name
+        run: |
+          echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+        env:
+          OWNER: '${{ github.repository_owner }}'
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2.1.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Push Dummy Image - 0
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3.2.0
         with:
           context: .
           push: true
@@ -48,10 +54,10 @@ jobs:
           build-args: |
             RUN_NUMBER=${{ github.run_number }}-0
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ghcr-delete-image-dummy:untagged
+            ghcr.io/${{ env.OWNER_LC }}/ghcr-delete-image-dummy:untagged
 
       - name: Build and Push Dummy Image - 1
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3.2.0
         with:
           context: .
           push: true
@@ -59,10 +65,10 @@ jobs:
           build-args: |
             RUN_NUMBER=${{ github.run_number }}-1
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ghcr-delete-image-dummy:untagged
+            ghcr.io/${{ env.OWNER_LC }}/ghcr-delete-image-dummy:untagged
 
       - name: Build and Push Dummy Image - 2
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3.2.0
         with:
           context: .
           push: true
@@ -70,13 +76,14 @@ jobs:
           build-args: |
             RUN_NUMBER=${{ github.run_number }}-2
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ghcr-delete-image-dummy:untagged
+            ghcr.io/${{ env.OWNER_LC }}/ghcr-delete-image-dummy:untagged
 
       - uses: ./
         with:
-          owner: bots-house
+          is-user: true
+          owner: ${{ env.OWNER_LC }}
           name: ghcr-delete-image-dummy
-          token: ${{ secrets.GCR_TOKEN }}
+          token: ${{ secrets.PAT }}
           untagged-all: true
 
   test-actions-delete-by-tag:
@@ -87,27 +94,34 @@ jobs:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: set lower case owner name
+        run: |
+          echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
+        env:
+          OWNER: '${{ github.repository_owner }}'
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2.1.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and Push Dummy Image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3.2.0
         with:
           context: .
           push: true
           file: Dockerfile.dummy
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ghcr-delete-image-dummy:${{ github.run_number }}
+            ghcr.io/${{ env.OWNER_LC }}/ghcr-delete-image-dummy:${{ github.run_number }}
 
       - uses: ./
         with:
-          owner: bots-house
+          is-user: true
+          owner: ${{ env.OWNER_LC }}
           name: ghcr-delete-image-dummy
-          token: ${{ secrets.GCR_TOKEN }}
+          token: ${{ secrets.PAT }}
           tag: ${{ github.run_number }}
